# CG_project_maze

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Cursor.h  Floor.h  Lamp.h  Maze.cpp  Maze.h  MazeGame.cpp  MazeGame.h  MazeWall.cpp  MazeWall.h  MazeWalls.h  Mesh.h  Model.h  Obstacle.h  README.md  ShaderBuilder.cpp  ShaderBuilder.h  ShaderProgram.h  Skybox.h  Vertex.h  floor.vert  glad.c  main.cpp  maze.txt  shader.vert  skybox.vert  wall.frag  wall.vert  wall_model.blend  wall_model.mtl
assets/: lamp_shader.vert  shader.frag  shader.vert  shaderInstanced.vert  shaderInstancedpre.vert  shaderpre.vert
assets/models/: floor_model.mtl  obstacle_model.mtl  wall_model.mtl
cmake/modules/: FindIrrKlang.cmake
includes/: common.h
includes/glm/: manual.md
includes/glm/doc/api/: a00001_source.html  a00022_source.html  a00038.html  a00038_source.html  a00062_source.html  a00142.html  a00142_source.html  a00247.html  a00299.html  a00327.html  a00356.html
